@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,6 @@
  * @test
  * @bug 6551616
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow transform.Bug6551616
  * @run testng/othervm transform.Bug6551616
  * @summary Test SAX2StAXEventWriter.
  */
@@ -38,12 +37,10 @@ import java.io.StringBufferInputStream;
 import javax.xml.stream.XMLEventWriter;
 import javax.xml.stream.XMLOutputFactory;
 
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 
 import com.sun.org.apache.xalan.internal.xsltc.trax.SAX2StAXEventWriter;
 
-@Listeners({jaxp.library.InternalAPIPolicy.class})
 public class Bug6551616 {
     String _cache = "";
 
